# Kge

./: .clang-format-old  .gitignore  Build.sh  CMakeLists.txt  README.md  kge.py
.cache/clangd/index/: main.cpp.D2446498DCDBD524.idx  stb_image.c.F03A3F5F1F75C249.idx  stb_image.h.6C85F9A8E5CBDB9B.idx  window.cpp.F9EAA7BDD8F55C04.idx
libs/: clean_libs.sh
libs/binaries/: .gitignore
libs/glad/: .gitignore  CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/include/: .gitignore  GLAD  GLFW  GLM  KHR
libs/include/STB/: .gitignore
src/: assert.hpp  kge.c++  kge_logging.cpp  kge_renderer.c++  kge_renderer_index_buffer.cpp  kge_renderer_material.cpp  kge_renderer_shader.cpp  kge_renderer_texture.cpp  kge_renderer_vertex_array.cpp  kge_renderer_vertex_buffer.cpp  kge_window.cpp  main.cpp  renderer.c++  renderer_vertex_array.cpp  renderer_vertex_buffer.cpp  window.cpp
